[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-research"
version = "2.0.0"
description = "Multi-agent swarm intelligence research platform powered by Google Gemini API & FastAPI"
authors = [{ name = "Siddarth" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.scripts]
nexus = "main:cli"
